src/test/ui/issues/issue-11593.stderr
error[E0603]: trait `Foo` is private
  --> $DIR/issue-11593.rs:7:24
   |
LL | impl private_trait_xc::Foo for Bar {}
   |                        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
